<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/selectCpvLayout"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:textSize="19sp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:text="Your Charge Per View."
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:text="Also, choose the amount you wish to charge for each banner you see." />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:padding="20dp"
                android:id="@+id/cpvRadioGroup2"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="1 Ksh per view." />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="3 Ksh per view. (Recommended)" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="6 Ksh per view." />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="13sp"
                    android:text="@string/noteAboutChoosingAmmount"
                    android:layout_height="wrap_content" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="wrap_content"
                        android:text="Cancel"
                        android:layout_alignParentLeft="true"
                        android:textColor="@color/colorPrimary"
                        android:background="@null"
                        android:id="@+id/cancelButton"
                        android:visibility="invisible"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true" />
                    <Button
                        android:layout_width="wrap_content"
                        android:text="continue"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/colorPrimary"
                        android:background="@null"
                        android:id="@+id/submitButton"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:translationX="400dp"
        android:id="@+id/personalisedContentOption"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:textSize="19sp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:text="Personalised Content."
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:id="@+id/explanation"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="1dp"
            android:text="@string/personalInfoIntro"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp">

            <Button
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:visibility="visible"
                android:text="Later."
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="Continue."
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:translationX="400dp"
        android:id="@+id/whyLayout"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:textSize="19sp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:text="Why?"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:id="@+id/explanation2"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="1dp"
            android:text="@string/personalInfoExplanation"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp">

            <Button
                android:id="@+id/okBtn207"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="Continue."
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>